# semantic-search

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_29_0045-4aa17b9313d8_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  documents.py  errors.py  health.py  search.py
backend/app/embedding/: __init__.py  embedder.py
backend/app/ingestion/: __init__.py  chunker.py  exceptions.py  normalize.py  parser.py  pipeline.py
backend/app/ingestion/parsers/: docx.py  pdf.py  txt.py
backend/app/models/: __init__.py  chunk.py  document.py  enums.py
backend/app/reranking/: __init__.py  reranker.py
backend/app/schemas/: document.py  errors.py  search.py
backend/app/search/: __init__.py  service.py
backend/app/storage/: database.py  documents.py  files.py
backend/evaluation/: benchmark.py
backend/tests/: _fake_session.py  conftest.py  test_chunker.py  test_documents_api.py  test_embedder.py  test_normalize.py  test_parser_dispatch.py  test_parser_docx.py  test_parser_pdf.py  test_parser_txt.py  test_pipeline.py  test_search_api.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: client.js
frontend/src/components/: DocumentUpload.vue  SearchResultCard.vue  SearchScopeFilter.vue
frontend/src/composables/: useNotification.js
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
(+4 files in other folders)
