[project]
name = "semsearch-backend"
version = "0.1.0"
description = "Semantic Search backend (FastAPI + PostgreSQL + Qdrant)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.3.3",
    "qdrant-client>=1.17.0",
    "python-multipart>=0.0.27",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "UP"]